<resources>
    <string name="app_name">MesaNews</string>
    <string name="email_hint_label" translatable="false">Email</string>
    <string name="password_hint_label">Password</string>
    <string name="login_button_label" translatable="false">Login</string>
    <string name="new_account_clickable_text">Create a new account</string>
    <string name="name_hint_label">Name</string>
    <string name="repeat_password_hint_label">Repeat password</string>
    <string name="sign_up_button_label" translatable="false">Sign Up</string>
    <string name="empty_field_error">Cannot be empty</string>
    <string name="different_password_error">Password confirmation is different</string>
</resources>